src/horseir/v2/tests/fail/t9.hir
// 9 : an empty file

